--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config build/webpack.config.js --mode=development",
-    "build": "webpack --config build/webpack.config.js --mode=production"
+    "build": "webpack --config build/webpack.config.js --progress --colors --mode=production"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -14,7 +14,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
