--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name"   : "wb",
+  "name": "wb",
   "version": "1.0.0",
-  "main"   : "index.js",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config build/webpack.config.js --mode=development",
     "build": "webpack --config build/webpack.config.js --progress --colors --mode=production"
   },
   "devDependencies": {
-    "@babel/core"                   : "^7.1.2",
-    "@babel/preset-env"             : "^7.1.0",
-    "autoprefixer"                  : "^9.3.1",
-    "babel-core"                    : "^6.26.3",
-    "babel-loader"                  : "^8.0.4",
-    "css-loader"                    : "^1.0.1",
-    "extract-text-webpack-plugin"   : "^4.0.0-beta.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.3.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin"           : "^3.2.0",
-    "node-sass"                     : "^4.10.0",
-    "postcss-loader"                : "^3.0.0",
-    "sass-loader"                   : "^7.1.0",
-    "style-loader"                  : "^0.23.1",
-    "url-loader"                    : "^1.1.2",
-    "webpack"                       : "^4.25.0",
-    "webpack-cli"                   : "^3.1.2",
-    "webpack-dev-server"            : "^3.1.10",
-    "webpack-merge"                 : "^4.1.4"
+    "html-webpack-plugin": "^3.2.0",
+    "html-withimg-loader": "^0.1.16",
+    "node-sass": "^4.10.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.25.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "dependencies": {
+    "global": "^4.3.2",
+    "live-server": "^1.2.0"
+  }
 }
