--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "autoprefixer": "^9.3.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
     "css-hot-loader": "^1.4.2",
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-include-assets-plugin": "^1.0.6",
     "html-webpack-plugin": "^3.2.0",
     "html-withimg-loader": "^0.1.16",
     "mini-css-extract-plugin": "^0.4.5",
@@ -34,5 +37,6 @@
   "browserslist": [
     "> 1%",
     "last 5 versions"
-  ]
+  ],
+  "dependencies": {}
 }
